# CoAgent4U

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  build_errors.txt  build_log.txt  build_output.txt  codebase_walkthrough.md.resolved  combined_migration.sql  combined_migration_utf8.sql  compile_errors.txt  compile_output.txt  cookies.txt  debug_persistence.txt  docker-compose.yml  error.txt  error2.txt  error3.txt  error_log.txt  final_compile_output.txt  final_test_output.txt  implementation_plan_mcp_a2a  log_fix_compile.txt  log_fix_compile_2.txt  log_fix_compile_3.txt  maven_output.txt  pom.xml  test_all_output.txt  test_output.txt  test_output_retry.txt  test_output_retry2.txt  tp.md
agent-py/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
agent-py/app/: __init__.py  config.py  main.py
agent-py/app/a2a/: __init__.py
agent-py/app/a2a/cap/: __init__.py
agent-py/app/bridge/: __init__.py  java_client.py  models.py
agent-py/app/llm/: __init__.py  planner.py
agent-py/app/mcp/: __init__.py  calendar_tools.py  google_calendar_client.py  oauth_manager.py  productivity_tools.py  task_tools.py
agent-py/app/privacy/: __init__.py
agent-py/app/runtime/: __init__.py  agent.py  memory.py
agent-py/tests/: test_agent_runtime.py  test_bridge.py  test_mcp_tools.py
build_op/: build_output.txt  build_output_logging.txt  build_output_redirect_fix.txt  build_output_schema_fix.txt  build_output_uninstall.txt  build_output_welcome.txt  final_build_output.txt  mvn_test_output.txt
coagent-app/: pom.xml
(+379 files in other folders)
