[project]
name = "coagent-py"
version = "0.1.0"
description = "CoAgent Personal Agent — Python runtime for MCP, A2A/CAP, and LLM orchestration"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",

    # MCP
    "mcp[cli]>=1.0.0",

    # A2A
    "a2a-sdk>=0.2.0",

    # LLM (model-agnostic)
    "litellm>=1.55.0",

    # Privacy
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",

    # Memory
    "redis>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "httpx",  # for TestClient
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
